dev-yeison/backend-demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-demo
  namespace: dev-yeison
spec:
  clusterIP: 10.43.205.18
  clusterIPs:
    - 10.43.205.18
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: backend-demo
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: demo-api
  sessionAffinity: None
  type: ClusterIP
