dev-yeison/backend-demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-demo
  namespace: dev-yeison
spec:
  ingressClassName: traefik
  rules:
    - host: api-demo.dev-yeison.local
      http:
        paths:
          - backend:
              service:
                name: backend-demo
                port:
                  number: 8080
            path: /
            pathType: Prefix
